Eliminate console errors

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -22,7 +22,7 @@
     <script
       async
       defer
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDrD5lt2VgVePOG2JjXRqLtjkXA4Bi8-ek&callback=initMap"
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDrD5lt2VgVePOG2JjXRqLtjkXA4Bi8-ek"
     ></script>
   </head>
   <body>
