Minor fixes for component renderings

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -10,12 +10,11 @@
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
       crossorigin="anonymous"
     />
-    <link href="https://fonts.googleapis.com/css?family=Cabin" rel="stylesheet">
-    <script
-      async
-      defer
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDrD5lt2VgVePOG2JjXRqLtjkXA4Bi8-ek"
-    ></script>
+    <link
+      href="https://fonts.googleapis.com/css?family=Cabin"
+      rel="stylesheet"
+    />
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDrD5lt2VgVePOG2JjXRqLtjkXA4Bi8-ek"></script>
   </head>
   <body>
     <div id="root"></div>
